# discord-bot

./: README.md  default.nix  discord-bot.cabal  flake.nix
src/: Main.hs  Utils.hs
