cabal-version:   2.4
name:            discord-bot
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          brfb
maintainer:      .brfb
copyright:       2024 brfb
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/discord-bot#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/discord-bot.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

executable discord-bot
  import:           common-options
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    discord-haskell <= 1.16.0
                    , text
                    , random
  other-extensions: OverloadedStrings
  other-modules:    Utils
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
